# Second-Programming-Practice

./: .gitignore  CMakeLists.txt  README.md
bck/DURLIB/: CMakeLists.txt
bck/DURLIB/durlib/: PCH.h
bck/DURLIB/durlib/Serialization/Json/: JsonParse.h
task_1/: main.cpp
task_1/source/: Fraction.cpp  Fraction.h
task_1/tests/: CMakeLists.txt
task_2/: main.cpp
task_2/data/csv/: airports.csv  passengers.csv
task_2/docs/: info.txt
task_2/source/: AirportSimulation.cpp  AirportSimulation.h
task_2/source/Airplane/: Airplane.cpp  Airplane.h  Flight.cpp  Flight.h
task_2/source/Airport/: Airport.cpp  Airport.h  Hangar.cpp  Hangar.h  Lobby.cpp  Lobby.h
task_2/source/Passenger/: Human.cpp  Human.h  Luggage.cpp  Luggage.h  Passenger.cpp  Passenger.h
